# hamming-codec

./: .bumpversion.cfg  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  centos7_build.yml  centos_build.yml  ci.yml  cpp_build.yml  learn-github-actions.yml
bash/: set_pythonpath.sh
cpp/: CMakeLists.txt
cpp/hamming_codec/: CMakeLists.txt  hamming_codec.cpp  hamming_codec.h
cpp/tools/: CMakeLists.txt  decode.cpp  encode.cpp
src/: CMakeLists.txt
src/cli/: __init__.py  cli.py  codec_cli.py
src/cpp/: CMakeLists.txt  hamming_codec.h
src/cpp/examples/: CMakeLists.txt  example_decode.cpp  example_encode.cpp
src/cpp/hamming_codec/: CMakeLists.txt  hamming_codec.cpp  hamming_codec.h  utils.cpp  utils.cpp.in  utils.h
src/hamming_codec/: __init__.py  utils.py
src/py_hamming_codec/: __init__.py
src/python/: CMakeLists.txt  module.cpp
src/python/cli/: __init__.py  cli.py  codec_cli.py
src/python/hamming_codec/: __init__.py
src/python/py_impl/: utils.py
src/to_remove/cli/: cli.py
src/to_remove/cpp/: CMakeLists.txt
src/to_remove/cpp/hamming_codec/: hamming_codec.cpp
src/to_remove/cpp/python/: CMakeLists.txt
