[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.15",
    "pybind11",
    "scikit-build",
    "ninja",
    "typer"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | .eggs
  | build
)/
'''
